examples/invalid/wrongParameters2.ccs
X[a] := a;

X[out]

